@@ -106,7 +106,7 @@ parameter_list|)
 throws|throws
 name|IOException
 function_decl|;
-comment|/** Renames an existing file in the directory.     If a file already exists with the new name, then it is replaced.     This replacement should be atomic. */
+comment|/** Renames an existing file in the directory.    * If a file already exists with the new name, then it is replaced.    * This replacement is not guaranteed to be atomic.    * @deprecated     */
 DECL|method|renameFile
 specifier|public
 specifier|abstract
